[tool.poetry]
name = "taskw"
version = "0.0.2"
description = "A web UI for taskwarrior"
authors = ["toffan <git.srv@toffan.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
jinja2 = "^3.1.2"
tasklib = "^2.5.1"
python-multipart = "^0.0.5"
uvicorn = "^0.20.0"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
